beekman-orig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bee
  name: beekman-change-reconciler
spec:
  replicas: 7
  selector:
    matchLabels:
      app: bee
  template:
    metadata:
      labels:
        app: bee
    spec:
      containers:
      - env:
        - name: RUN_TYPE
          value: cpu
        - name: CPU_PERCENT
          value: "95"
        image: quay.io/ecotz/sampleapp:latest
        imagePullPolicy: Always
        name: beekman-1
        resources:
          limits:
            cpu: 400m
            memory: 500Mi
          requests:
            cpu: 400m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - env:
        - name: RUN_TYPE
          value: cpu
        - name: CPU_PERCENT
          value: "95"
        image: quay.io/ecotz/sampleapp:latest
        imagePullPolicy: Always
        name: beekman-2
        resources:
          limits:
            cpu: 400m
            memory: 500Mi
          requests:
            cpu: 400m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - env:
        - name: RUN_TYPE
          value: cpu
        - name: CPU_PERCENT
          value: "95"
        image: quay.io/ecotz/sampleapp:latest
        imagePullPolicy: Always
        name: beekman-3
        resources:
          limits:
            cpu: 400m
            memory: 500Mi
          requests:
            cpu: 400m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - env:
        - name: RUN_TYPE
          value: cpu
        - name: CPU_PERCENT
          value: "95"
        image: quay.io/ecotz/sampleapp:latest
        imagePullPolicy: Always
        name: beekman-4
        resources:
          limits:
            cpu: 400m
            memory: 500Mi
          requests:
            cpu: 400m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - env:
        - name: RUN_TYPE
          value: cpu
        - name: CPU_PERCENT
          value: "95"
        image: quay.io/ecotz/sampleapp:latest
        imagePullPolicy: Always
        name: beekman-5
        resources:
          limits:
            cpu: 400m
            memory: 500Mi
          requests:
            cpu: 400m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - env:
        - name: RUN_TYPE
          value: cpu
        - name: CPU_PERCENT
          value: "95"
        image: quay.io/ecotz/sampleapp:latest
        imagePullPolicy: Always
        name: beekman-6
        resources:
          limits:
            cpu: 400m
            memory: 500Mi
          requests:
            cpu: 400m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - env:
        - name: RUN_TYPE
          value: cpu
        - name: CPU_PERCENT
          value: "95"
        image: quay.io/ecotz/sampleapp:latest
        imagePullPolicy: Always
        name: beekman-7
        resources:
          limits:
            cpu: 400m
            memory: 500Mi
          requests:
            cpu: 400m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: docker-credentials
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
