route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-test
  namespace: argocd-test
spec:
  path: /
  to:
    kind: Service
    name: bee
  port:
    targetPort: http
